updates the crawler

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="coveo-main-section">
           <div class="coveo-facet-column">
             <div class="CoveoDynamicFacet" data-title="Type" data-field="@pokemontype" data-number-of-values="8"></div>
+            <div class="CoveoDynamicFacet" data-title="Generation" data-field="@pokemongeneration" data-number-of-values="8"></div>
           </div>
           <div class="coveo-results-column">
             <div class="CoveoShareQuery"></div>
